Wed Apr 24 15:54:44 2013  Jiri (George) Lebl <jirka@5z.com>

	* help/Makefile.am: fix compile

	* help/C/genius.xml: fix some english issues

Wed Apr 24 15:36:52 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: more sane precision computations especially when
	  zoomed in.  Also reduce font size in case of too many digits.

Wed Apr 24 13:58:27 2013  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: include the function list in the main xml

	* help/C/genius.xml: expand help for the root finding functions

	* lib/equation_solving/find_root.gel: fix FindRootBisection and
	  FindRootMullersMethod to actually work.

Mon Mar 04 12:33:47 2013  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: fix up the about entry to reflect reality a bit
	  better.

Mon Mar 04 12:29:41 2013  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: remove scale="50" from images apparently that
	  nowdays makes everything 50 pixels large or some other nonsense
	  like that.

Wed Feb 06 22:22:16 2013  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theoory/primes.gel: update the mersenne stuff

Sun Dec 23 13:22:07 2012  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: fix documentation of less than and greater than
	  (thanks to Marek Cernocky).  Also expand the documentation in
	  several places a little.

Tue Dec 18 20:49:50 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/mpwrap.c, src/calc.c: make a minor optimization, and remove an
	  unsafe unnecessary one

Mon Dec 17 15:15:44 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: bit of post release cleanup

	* help/C/genius.xml: do some fixes, add help about comments and
	  the new way that for loops with floats work.

Mon Dec 17 13:52:35 2012  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.16

Mon Dec 17 13:45:21 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c: when forloop (sum/prod/for) is with floats then check
	  for overrun, and if within 2^-20 times the step size, then still