@@ -1,3 +1,10 @@
+Wed Apr 24 16:45:17 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/parseutil.h, src/funclib.c: properly initialize
+	  id.uninitialized (ironic huh? :)
+
+	* src/graphing.c: use the proper temp directory
+
 Wed Apr 24 15:54:44 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/Makefile.am: fix compile
